@@ -38,22 +38,8 @@ import static org.ode4j.ode.DGeom.dBoxClass;
 import static org.ode4j.ode.DGeom.dCapsuleClass;
 import static org.ode4j.ode.DGeom.dPlaneClass;
 import static org.ode4j.ode.DGeom.dSphereClass;
-import static org.ode4j.ode.DMatrix.dMultiply0;
-import static org.ode4j.ode.DMatrix.dMultiply1;
-import static org.ode4j.ode.DRotation.dRFromAxisAndAngle;
-import static org.ode4j.ode.OdeMath.dCalcVectorDot3_14;
-import static org.ode4j.ode.OdeMath.dMultiply0_331;
-import static org.ode4j.ode.OdeMath.dPlaneSpace;
+import static org.ode4j.ode.OdeMath.*;
 import static org.ode4j.ode.internal.Common.M_PI;
-import static org.ode4j.ode.internal.Common.dFabs;
-import static org.ode4j.ode.internal.Common.dSqrt;
-import static org.ode4j.ode.internal.ErrorHandler.dDebug;
-import static org.ode4j.ode.internal.ErrorHandler.dError;
-import static org.ode4j.ode.DMisc.dMakeRandomVector;
-import static org.ode4j.ode.DMisc.dRandGetSeed;
-import static org.ode4j.ode.DMisc.dRandInt;
-import static org.ode4j.ode.DMisc.dRandReal;
-import static org.ode4j.ode.DMisc.dRandSetSeed;
 
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
