@@ -25,50 +25,8 @@
 package org.ode4j.demo;
 
 import static org.ode4j.ode.OdeConstants.dInfinity;
-import static org.ode4j.ode.OdeMath.dMultiply0_133;
-import static org.ode4j.ode.OdeMath.dMultiply0_331;
-import static org.ode4j.ode.OdeMath.dMultiply0_333;
-import static org.ode4j.ode.OdeMath.dMultiply1_331;
-import static org.ode4j.ode.OdeMath.dMultiply1_333;
-import static org.ode4j.ode.OdeMath.dMultiply2_333;
-import static org.ode4j.ode.OdeMath.dNormalize4;
-import static org.ode4j.ode.OdeMath.dPlaneSpace;
-import static org.ode4j.ode.OdeMath.dSetCrossMatrixPlus;
+import static org.ode4j.ode.OdeMath.*;
 import static org.ode4j.ode.internal.Common.dDOUBLE;
-import static org.ode4j.ode.internal.Common.dIASSERT;
-import static org.ode4j.ode.internal.Common.dPAD;
-import static org.ode4j.ode.internal.ErrorHandler.dDebug;
-import static org.ode4j.ode.internal.ErrorHandler.dGetDebugHandler;
-import static org.ode4j.ode.internal.ErrorHandler.dSetDebugHandler;
-import static org.ode4j.ode.internal.ErrorHandler.dSetMessageHandler;
-import static org.ode4j.ode.DMatrix.dFactorCholesky;
-import static org.ode4j.ode.DMatrix.dFactorLDLT;
-import static org.ode4j.ode.DMatrix.dInvertPDMatrix;
-import static org.ode4j.ode.DMatrix.dIsPositiveDefinite;
-import static org.ode4j.ode.DMatrix.dLDLTAddTL;
-import static org.ode4j.ode.DMatrix.dLDLTRemove;
-import static org.ode4j.ode.DMatrix.dMultiply0;
-import static org.ode4j.ode.DMatrix.dMultiply1;
-import static org.ode4j.ode.DMatrix.dMultiply2;
-import static org.ode4j.ode.DMatrix.dRemoveRowCol;
-import static org.ode4j.ode.DMatrix.dSetZero;
-import static org.ode4j.ode.DMatrix.dSolveCholesky;
-import static org.ode4j.ode.DMatrix.dSolveLDLT;
-import static org.ode4j.ode.DMisc.dClearUpperTriangle;
-import static org.ode4j.ode.DMisc.dMakeRandomMatrix;
-import static org.ode4j.ode.DMisc.dMakeRandomVector;
-import static org.ode4j.ode.DMisc.dMaxDifference;
-import static org.ode4j.ode.DMisc.dMaxDifferenceLowerTriangle;
-import static org.ode4j.ode.DMisc.dRandGetSeed;
-import static org.ode4j.ode.DMisc.dRandReal;
-import static org.ode4j.ode.DMisc.dRandSetSeed;
-import static org.ode4j.ode.DMisc.dTestRand;
-import static org.ode4j.ode.DRotation.dQMultiply0;
-import static org.ode4j.ode.DRotation.dQMultiply1;
-import static org.ode4j.ode.DRotation.dQMultiply2;
-import static org.ode4j.ode.DRotation.dQMultiply3;
-import static org.ode4j.ode.DRotation.dQfromR;
-import static org.ode4j.ode.DRotation.dRfromQ;
 
 import java.util.ArrayList;
 
