@@ -22,6 +22,10 @@ TODO include DMatrix, DRoation, DMisc into OdeMath i.o. internal Rotation/Matrix
 
 2012-May-07 Tilmann Zaschke
 		* Migration to ode-0.12:
+		  - Included DMatrix/DRotation/DMisc in OdeMath.
+
+2012-May-07 Tilmann Zaschke
+		* Migration to ode-0.12:
 		  - Migrated APIs for DMatrix, DMisc and DRotation
 		  - Migrated remaining demos
 		  - Started migration of DrawStuff.
